upgrade with real content

--- a/public/index.html
+++ b/public/index.html
@@ -2,80 +2,91 @@
 <html>
   <head>
     <link rel="stylesheet" href="/styles/output.css">
+  <style type="text/css">
+    input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+      color: #A1967B;
+      opacity: 1; /* Firefox */
+    }
+  </style>
   </head>
   <body>
     <div style="background: #FAF2E0">
-      <div class="container px-40 text-center py-32">
-        <h1 class="mb-3 text-4xl font-extrabold leading-tight">
-          <!--The new morning for an engaged team-->
-          <!--Engage your mornings. Engage your teams.-->
-          <!--The new morning ritual.<br>For a better team.-->
+      <div class="container px-40 py-32 text-center">
+        <h1 class="mb-3 text-5xl font-extrabold leading-tight">
           Upgrade your mornings.<br>Upgrade your team.
         </h1>
         <p><img class="mt-2 m-auto" src="/images/practice-pillpack.svg"></p>
       </div>
     </div>
     <div>
-      <div class="container px-40 py-20 text-center max-w-3xl">
-        <p class="text-sm"><strong>Practice</strong> is offering a 1-week morning ritual to make your team more <strong>engaged</strong>, <strong>connected</strong>, and <strong>productive</strong>.</p>
-        <!--
-        <h2 class="mt-20 mb-4 font-semibold">Meet your facilitator, Sam Langer</h2>
-        <p>
-          <img class="m-auto" width="480" src="/images/samlanger.jpg">
-        </p>
-        -->
+      <div class="container px-16 py-20 text-center max-w-3xl">
+        <p class="text-xl"><strong>Practice</strong> is offering our 1-week Team Morning Upgrade product to make your team more <strong>engaged</strong>, <strong>connected</strong>, and <strong>productive</strong>.</p>
       </div>
     </div>
-    <div class="container p-20 bg-black text-white">
+
+    <div class="container px-16 py-20 bg-black text-white max-w-4xl text-xl">
       <h2 class="text-3xl font-extrabold leading-tight">
-        What is Practice?
+        What is the Team Morning Upgrade?
       </h2>
 
-      <h2 class="font-bold my-6">
-        <span class="w-6 h-6 mr-2 inline-block bg-red-600 font-normal text-center rounded-full">1</span>Your daily needs in 90 minutes
+      <h2 class="font-bold mt-8">
+        <span class="w-6 h-6 mr-2 inline-block bg-red-600 text-base font-normal text-center rounded-full relative" style="top: -1px">1</span>A fun intake of where your team's at
       </h2>
-      <ul class="leading-loose">
-        <li><span class="inline-block w-6 mr-2">&#x1F3E0;</span> <strong class="inline-block w-16">Arrive</strong> Hydrate. Breathe. Meditate.</li>
-        <li><span class="inline-block w-6 mr-2">&#x1F4AA;&#x1F3FC;</span> <strong class="inline-block w-16">Move</strong> Push. Pull. Stretch.</li>
-        <li><span class="inline-block w-6 mr-2">&#x2764;&#xFE0F;</span> <strong class="inline-block w-16">Love</strong> Share. Connect. Support.</li>
-        <li><span class="inline-block w-6 mr-2">&#x1F3A8;</span> <strong class="inline-block w-16">Create</strong> Focus. Work. Learn.</li>
+      <ul class="leading-loose mt-3 ml-8">
+        <li>Tracking employee engagement, wellbeing, and productivity.</li>
       </ul>
 
-      <h2 class="font-bold my-6">
-        <span class="w-6 h-6 mr-2 inline-block bg-blue-600 font-normal text-center rounded-full">2</span>With an inspiring, in-person community
+      <h2 class="font-bold mt-6">
+        <span class="w-6 h-6 mr-2 inline-block bg-blue-600 text-base font-normal text-center rounded-full relative" style="top: -1px">2</span>Your daily needs in 90 minutes, 3 times a week
       </h2>
-      <ul class="leading-loose">
-        <li><span class="inline-block w-6 mr-2">&#x1F528;</span> <strong>Entrepreneurs</strong></li>
-        <li><span class="inline-block w-6 mr-2">&#x1F58C;&#xFE0F;</span> <strong>Artists</strong></li>
-        <li><span class="inline-block w-6 mr-2">&#x1F44D;&#x1F3FC;</span> <strong>Changemakers</strong></li>
-        <li><span class="inline-block w-6 mr-2">&#x1F52E;</span> <strong>Dreamers</strong></li>
+      <ul class="leading-loose mt-3">
+        <li><span class="inline-block w-6 mr-2">&#x1F44D;&#x1F3FC;</span> <strong class="inline-block w-40 mr-1">Proven practices</strong> Breathwork, movement, meditation, connection</li>
+        <li><span class="inline-block w-6 mr-2">&#x270F;&#xFE0F;</span> <strong class="inline-block w-40 mr-1">Focused work</strong> Complete your most important tasks</li>
+        <li><span class="inline-block w-6 mr-2">&#x2615;&#xFE0F;</span> <strong class="inline-block w-40 mr-1">Coffee + Shakes</strong> Extremely high-quality morning beverages made on-site</li>
+        <li><span class="inline-block w-6 mr-2">&#x1F3A8;</span> <strong class="inline-block w-40 mr-1">Just for you</strong> Personalized based on your team's unique intake</li>
       </ul>
 
-      <h2 class="font-bold my-6">
-        <span class="w-6 h-6 mr-2 inline-block bg-yellow-600 font-normal text-center rounded-full">3</span>Making us more connected, less lonely, relaxed, and focused
+      <h2 class="font-bold mt-6">
+        <span class="w-6 h-6 mr-2 inline-block bg-yellow-600 text-base font-normal text-center rounded-full relative" style="top: -1px">3</span>A personalized, actionable assessment
       </h2>
+      <ul class="leading-loose mt-3">
+        <li><span class="inline-block w-6 mr-2">&#x1F4C8;</span> <strong class="inline-block w-48">Unique feedback</strong> Quantitative and qualitative insights from your team</li>
+        <li><span class="inline-block w-6 mr-2">&#x1F4A1;</span> <strong class="inline-block w-48">Recommendations</strong> To improve engagement, wellbeing, and productivity</li>
+      </ul>
     </div>
-    <div class="container p-20">
+
+    <div class="container px-16 py-20 max-w-4xl">
       <h2 class="text-3xl font-extrabold leading-tight">
         Frequently asked questions
       </h2>
-      <ol class="mt-6 text-sm list-decimal">
-        <li class="mb-2 leading-loose">
-          <strong>Question 1</strong><br>Answer
+      <ol class="mt-8 text-xl list-decimal">
+        <li class="mb-6">
+          <h3 class="font-semibold mb-3">What do we need to get started?</h3>
+          <p class="mb-3 leading-relaxed">All we need is a space that can hold 8 to 10 people that we can reserve 3 times a week before work, typically Monday, Wednesday, Friday 7:30 am – 9:00 am.</p>
+          <p class="leading-relaxed">We’ll provide the facilitation, coffee, shakes, and other materials necessary!</p>
         </li>
-        <li class="mb-2 leading-loose">
-          <strong>Question 2</strong><br>Answer
+        <li class="mb-6">
+          <h3 class="font-semibold mb-3">What makes the Team Morning Upgrade unique?</h3>
+          <p class="mb-3 leading-relaxed">In addition to our intakes, assessments, morning routines (including delicious coffee and shakes!), we offer complimentary accountability check-ins and offline coaching to your employees during the engagement.</p>
         </li>
-        <li class="leading-loose">
-          <strong>Question 3</strong><br>Answer
+        <li>
+          <h3 class="font-semibold mb-3">What are the benefits of a morning routine?</h3>
+          <p class="mb-3 leading-relaxed">Morning routines are followed by the most accomplished athletes, entrepreneurs, and creatives, including Bill Gates, Benjamin Franklin, and Oprah and are a powerful way to fulfill your most important daily needs — hydration, movement, connection, focus, and creation.</p>
+        </li>
+        <li>
+          <h3 class="font-semibold mb-3">What do work sessions consist of?</h3>
+          <p class="mb-3 leading-relaxed">It's up to you what you want to work on, either work-related or personal! However, we find that tackling projects you've been putting off, difficult emails, and personal tasks that would otherwise distract you during work are some of the most effective tasks.</p>
         </li>
       </ol>
     </div>
     <div style="background: #FAF2E0">
-      <div class="container p-20">
-        <h2 class="text-3xl font-extrabold leading-tight">
+      <div class="container px-16 py-20 max-w-4xl">
+        <h2 class="mb-8 text-3xl font-extrabold leading-tight">
           Sign up
         </h2>
+        <form class="text-xl">
+          <input class="mr-2 px-4 py-3 bg-transparent border border-black rounded" type="text" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded" style="color: #FAF2E0" type="submit" value="Sign up">
+        </form>
       </div>
     </div>
     </div>
