--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,10 @@
         </form>
       </div>
     </div>
+    <div class="bg-black">
+      <div class="container px-16 py-20 max-w-4xl">
+        <p><img src="/images/practice-white.svg"></p>
+      </div>
     </div>
   </body>
 </html>
