clean up offering spacing; update footer to include pillpack

--- a/public/index.html
+++ b/public/index.html
@@ -29,29 +29,29 @@
         What is the Team Morning Upgrade?
       </h2>
 
-      <h2 class="font-bold mt-8">
-        <span class="w-6 h-6 mr-2 inline-block bg-red-600 text-base font-normal text-center rounded-full relative" style="top: -1px">1</span>A fun intake of where your team's at
+      <h2 class="font-bold mt-12">
+        <span class="w-8 h-8 inline-block bg-red-600 font-normal text-center text-lg rounded-full leading-8 mr-3">1</span>A fun intake of where your team's at
       </h2>
-      <ul class="leading-loose mt-3 ml-8">
-        <li>Tracking employee engagement, wellbeing, and productivity.</li>
+      <ul class="leading-loose mt-3 ml-1">
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F4CB;</span> <strong class="inline-block w-36 mr-3 font-bold ml-1">Smart tracking</strong> <span class="text-base">Employee engagement, wellbeing, and productivity</span></li>
       </ul>
 
-      <h2 class="font-bold mt-6">
-        <span class="w-6 h-6 mr-2 inline-block bg-blue-600 text-base font-normal text-center rounded-full relative" style="top: -1px">2</span>Your daily needs in 90 minutes, 3 times a week
+      <h2 class="font-bold mt-12">
+        <span class="w-8 h-8 inline-block bg-blue-600 font-normal text-center text-lg rounded-full leading-8 mr-3">2</span>Your daily needs in 90 minutes, 3 times a week
       </h2>
-      <ul class="leading-loose mt-3">
-        <li><span class="inline-block w-6 mr-2">&#x1F44D;&#x1F3FC;</span> <strong class="inline-block w-40 mr-1">Proven practices</strong> Breathwork, movement, meditation, connection</li>
-        <li><span class="inline-block w-6 mr-2">&#x270F;&#xFE0F;</span> <strong class="inline-block w-40 mr-1">Focused work</strong> Complete your most important tasks</li>
-        <li><span class="inline-block w-6 mr-2">&#x2615;&#xFE0F;</span> <strong class="inline-block w-40 mr-1">Coffee + Shakes</strong> Extremely high-quality morning beverages made on-site</li>
-        <li><span class="inline-block w-6 mr-2">&#x1F3A8;</span> <strong class="inline-block w-40 mr-1">Just for you</strong> Personalized based on your team's unique intake</li>
+      <ul class="leading-loose mt-3 ml-1">
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F44D;&#x1F3FC;</span> <strong class="inline-block w-40 mr-1 font-bold ml-1">Proven practices</strong> <span class="text-base">Breathwork, movement, meditation, connection</span></li>
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x270F;&#xFE0F;</span> <strong class="inline-block w-40 mr-1 font-bold ml-1">Focused work</strong> <span class="text-base">Complete your most important tasks</span></li>
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x2615;&#xFE0F;</span> <strong class="inline-block w-40 mr-1 font-bold ml-1">Coffee + shakes</strong> <span class="text-base">Extremely high-quality morning beverages made on-site</span></li>
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F3A8;</span> <strong class="inline-block w-40 mr-1 font-bold ml-1">Just for you</strong> <span class="text-base">Personalized based on your team's unique intake</span></li>
       </ul>
 
-      <h2 class="font-bold mt-6">
-        <span class="w-6 h-6 mr-2 inline-block bg-yellow-600 text-base font-normal text-center rounded-full relative" style="top: -1px">3</span>A personalized, actionable assessment
+      <h2 class="font-bold mt-12">
+        <span class="w-8 h-8 inline-block bg-yellow-600 font-normal text-center text-lg rounded-full leading-8 mr-3">3</span>A personalized, actionable assessment
       </h2>
-      <ul class="leading-loose mt-3">
-        <li><span class="inline-block w-6 mr-2">&#x1F4C8;</span> <strong class="inline-block w-48">Unique feedback</strong> Quantitative and qualitative insights from your team</li>
-        <li><span class="inline-block w-6 mr-2">&#x1F4A1;</span> <strong class="inline-block w-48">Recommendations</strong> To improve engagement, wellbeing, and productivity</li>
+      <ul class="leading-loose mt-3 ml-1">
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F4C8;</span> <strong class="inline-block w-40 font-bold ml-1 mr-3">Unique feedback</strong> <span class="text-base">Quantitative and qualitative insights from your team</span></li>
+        <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F4A1;</span> <strong class="inline-block w-40 font-bold ml-1 mr-3">Recommendations</strong> <span class="text-base">To improve engagement, wellbeing, and productivity</span></li>
       </ul>
     </div>
 
@@ -91,7 +91,7 @@
     </div>
     <div class="bg-black">
       <div class="container px-16 py-20 max-w-4xl">
-        <p><img src="/images/practice-white.svg"></p>
+        <p><img src="/images/practice-white.svg" width="76" class="inline-block"><span style="padding: 0 7px; font-size: 13px">&#x2764;&#xFE0F;</span><img src="/images/pillpack-white.svg" width="80" class="inline-block"></p>
       </div>
     </div>
   </body>
