add mailchimp sign up

--- a/public/index.html
+++ b/public/index.html
@@ -82,10 +82,12 @@
     <div style="background: #FAF2E0">
       <div class="container px-16 py-20 max-w-4xl">
         <h2 class="mb-8 text-3xl font-extrabold leading-tight">
-          Sign up
+          Learn more
         </h2>
-        <form class="text-xl">
-          <input class="mr-2 px-4 py-3 bg-transparent border border-black rounded" type="text" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded" style="color: #FAF2E0" type="submit" value="Sign up">
+        <form action="https://community.us19.list-manage.com/subscribe/post?u=5963ef15ff4e776e4bdc64cec&amp;id=c201bb3658" method="post" target="_blank" class="text-xl" novalidate>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5963ef15ff4e776e4bdc64cec_c201bb3658" tabindex="-1" value=""></div>
+          <input class="mr-2 px-4 py-3 bg-transparent border border-black rounded" type="email" name="EMAIL" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded cursor-pointer hover:opacity-75" style="color: #FAF2E0" type="submit" value="Sign up">
         </form>
       </div>
     </div>
