extract number styles

--- a/public/index.html
+++ b/public/index.html
@@ -30,14 +30,14 @@
       </h2>
 
       <h2 class="font-bold mt-12">
-        <span class="w-8 h-8 inline-block bg-red-600 font-normal text-center text-lg rounded-full leading-8 mr-3">1</span>A fun intake of where your team's at
+        <span class="number bg-red-600">1</span>A fun intake of where your team's at
       </h2>
       <ul class="leading-loose mt-3 ml-1">
         <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F4CB;</span> <strong class="inline-block w-36 mr-3 font-bold ml-1">Smart tracking</strong> <span class="text-base">Employee engagement, wellbeing, and productivity</span></li>
       </ul>
 
       <h2 class="font-bold mt-12">
-        <span class="w-8 h-8 inline-block bg-blue-600 font-normal text-center text-lg rounded-full leading-8 mr-3">2</span>Your daily needs in 90 minutes, 3 times a week
+        <span class="number bg-blue-600">2</span>Your daily needs in 90 minutes, 3 times a week
       </h2>
       <ul class="leading-loose mt-3 ml-1">
         <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F44D;&#x1F3FC;</span> <strong class="inline-block w-40 mr-1 font-bold ml-1">Proven practices</strong> <span class="text-base">Breathwork, movement, meditation, connection</span></li>
@@ -47,7 +47,7 @@
       </ul>
 
       <h2 class="font-bold mt-12">
-        <span class="w-8 h-8 inline-block bg-yellow-600 font-normal text-center text-lg rounded-full leading-8 mr-3">3</span>A personalized, actionable assessment
+        <span class="number bg-yellow-600">3</span>A personalized, actionable assessment
       </h2>
       <ul class="leading-loose mt-3 ml-1">
         <li class="text-lg"><span class="inline-block w-6 mr-2">&#x1F4C8;</span> <strong class="inline-block w-40 font-bold ml-1 mr-3">Unique feedback</strong> <span class="text-base">Quantitative and qualitative insights from your team</span></li>
