fix mobile viewport

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/styles/output.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
       input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: #A1967B;
