--- a/public/index.html
+++ b/public/index.html
@@ -12,69 +12,69 @@
   </head>
   <body>
     <div style="background: #FAF2E0">
-      <div class="container px-16 md:px-40 py-24 md:py-32 text-center">
-        <h1 class="mb-3 text-3xl md:text-5xl font-extrabold leading-tight">
+      <div class="container px-10 md:px-40 py-20 md:py-32 text-center">
+        <h1 class="mb-3 text-2xl md:text-5xl font-extrabold leading-tight">
           Upgrade your mornings.<br>Upgrade your team.
         </h1>
-        <p><img class="w-64 md:w-auto mt-2 m-auto" src="/images/practice-pillpack.svg"></p>
+        <p><img class="w-56 md:w-auto mt-2 m-auto" src="/images/practice-pillpack.svg"></p>
       </div>
     </div>
     <div>
-      <div class="container px-16 py-16 md:py-20 text-center max-w-3xl">
-        <p class="text-lg md:text-xl"><strong>Practice</strong> is offering our 1-week Team Morning Upgrade product to make your team more <strong>engaged</strong>, <strong>connected</strong>, and <strong>productive</strong>.</p>
+      <div class="container px-10 py-12 md:py-20 text-center max-w-3xl">
+        <p class="md:text-xl"><strong>Practice</strong> is offering our 1-week Team Morning Upgrade product to make your team more <strong>engaged</strong>, <strong>connected</strong>, and <strong>productive</strong>.</p>
       </div>
     </div>
 
-    <div class="container px-16 py-20 bg-black text-white max-w-4xl text-lg md:text-xl">
+    <div class="container px-10 py-12 bg-black text-white max-w-4xl text-lg md:text-xl">
       <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">
         What is the Team Morning Upgrade?
       </h2>
 
-      <h2 class="font-bold mt-12 flex items-baseline">
+      <h2 class="font-bold mt-10 md:mt-12 flex items-baseline">
         <span class="number bg-red-600 flex-none">1</span>A fun intake of where your team's at
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg flex">
-          <span class="inline-block w-6 mr-3">&#x1F4CB;</span><span class="ml-1"><strong class="inline-block w-36 mr-3 font-bold">Smart tracking</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Employee engagement, wellbeing, and productivity</span></span>
+          <span class="inline-block w-6 mr-3">&#x1F4CB;</span><span class="ml-1"><strong class="inline-block md:w-36 mr-3 font-bold">Smart tracking</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Employee engagement, wellbeing, and productivity</span></span>
         </li>
       </ul>
 
-      <h2 class="font-bold mt-12 flex items-baseline">
+      <h2 class="font-bold mt-8 md:mt-12 flex items-baseline">
         <span class="number bg-blue-600 flex-none">2</span><span>Your daily needs in 90 minutes, 3 times a week</span>
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F44D;&#x1F3FC;</span><span class="ml-1"><strong class="inline-block w-40 mr-1 font-bold">Proven practices</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Breathwork, movement, meditation, connection</span></span>
+          <span class="inline-block w-6 mr-3">&#x1F44D;&#x1F3FC;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Proven practices</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Breathwork, movement, meditation, connection</span></span>
         </li>
         <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x270F;&#xFE0F;</span><span class="ml-1"><strong class="inline-block w-40 mr-1 font-bold">Focused work</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Complete your most important tasks</span></span>
+          <span class="inline-block w-6 mr-3">&#x270F;&#xFE0F;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Focused work</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Complete your most important tasks</span></span>
         </li>
         <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x2615;&#xFE0F;</span><span class="ml-1"><strong class="inline-block w-40 mr-1 font-bold">Coffee + shakes</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Extremely high-quality morning beverages made on-site</span></span>
+          <span class="inline-block w-6 mr-3">&#x2615;&#xFE0F;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Coffee + shakes</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Extremely high-quality morning beverages made on-site</span></span>
         </li>
         <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F3A8;</span><span class="ml-1"><strong class="inline-block w-40 mr-1 font-bold">Just for you</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Personalized based on your team's unique intake</span></span>
+          <span class="inline-block w-6 mr-3">&#x1F3A8;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Just for you</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Personalized based on your team's unique intake</span></span>
         </li>
       </ul>
 
-      <h2 class="font-bold mt-12 flex items-baseline">
+      <h2 class="font-bold mt-8 md:mt-12 flex items-baseline">
         <span class="number bg-yellow-600 flex-none">3</span>A personalized, actionable assessment
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F4C8;</span><span class="ml-1"><strong class="inline-block w-40 font-bold">Unique feedback</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">Quantitative and qualitative insights from your team</span></span>
+          <span class="inline-block w-6 mr-3">&#x1F4C8;</span><span class="ml-1"><strong class="inline-block md:w-40 font-bold">Unique feedback</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">Quantitative and qualitative insights from your team</span></span>
         </li>
         <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F4A1;</span><span class="ml-1"><strong class="inline-block w-40 font-bold">Recommendations</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">To improve engagement, wellbeing, and productivity</span></span>
+          <span class="inline-block w-6 mr-3">&#x1F4A1;</span><span class="ml-1"><strong class="inline-block md:w-40 font-bold">Recommendations</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">To improve engagement, wellbeing, and productivity</span></span>
         </li>
       </ul>
     </div>
 
-    <div class="container px-16 py-16 md:py-20 max-w-4xl">
+    <div class="container px-10 py-12 md:py-20 max-w-4xl">
       <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">
         Frequently asked questions
       </h2>
-      <ol class="mt-8 text-lg md:text-xl list-decimal">
+      <ul class="mt-8 text-lg md:text-xl">
         <li class="mb-6">
           <h3 class="font-semibold mb-3">What do we need to get started?</h3>
           <p class="mb-3 leading-relaxed">All we need is a space that can hold 8 to 10 people that we can reserve 3 times a week before work, typically Monday, Wednesday, Friday 7:30 am – 9:00 am.</p>
@@ -92,17 +92,19 @@
           <h3 class="font-semibold mb-3">What do work sessions consist of?</h3>
           <p class="leading-relaxed">It's up to you what you want to work on, either work-related or personal! However, we find that tackling projects you've been putting off, difficult emails, and personal tasks that would otherwise distract you during work are some of the most effective tasks.</p>
         </li>
-      </ol>
+      </ul>
     </div>
     <div style="background: #FAF2E0">
-      <div class="container px-16 py-16 md:py-20 max-w-4xl">
+      <div class="container px-10 py-12 md:py-20 max-w-4xl">
         <h2 class="mb-8 text-2xl md:text-3xl font-extrabold leading-tight">
           Learn more
         </h2>
         <form action="https://community.us19.list-manage.com/subscribe/post?u=5963ef15ff4e776e4bdc64cec&amp;id=c201bb3658" method="post" target="_blank" class="text-lg md:text-xl" novalidate>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5963ef15ff4e776e4bdc64cec_c201bb3658" tabindex="-1" value=""></div>
-          <input class="mr-2 px-4 py-3 bg-transparent border border-black rounded" type="email" name="EMAIL" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded cursor-pointer hover:opacity-75" style="color: #FAF2E0" type="submit" value="Sign up">
+          <div class="flex flex-col md:flex-row">
+            <input class="md:mr-2 mb-3 md:mb-0 px-4 py-3 bg-transparent border border-black rounded" type="email" name="EMAIL" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded cursor-pointer hover:opacity-75" style="color: #FAF2E0" type="submit" value="Sign up">
+          </div>
         </form>
       </div>
     </div>
