fix up desktop styles; tweak mobile spacing

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="container px-10 py-12 bg-black text-white max-w-4xl text-lg md:text-xl">
+    <div class="container px-10 py-12 md:px-16 md:py-20 bg-black text-white max-w-4xl text-lg md:text-xl">
       <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">
         What is the Team Morning Upgrade?
       </h2>
@@ -35,7 +35,7 @@
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg flex">
-          <span class="inline-block w-6 mr-3">&#x1F4CB;</span><span class="ml-1"><strong class="inline-block md:w-36 mr-3 font-bold">Smart tracking</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Employee engagement, wellbeing, and productivity</span></span>
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4CB;</span><span class="ml-2"><strong class="inline-block md:w-36 mr-3 font-bold">Smart tracking</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Employee engagement, wellbeing, and productivity</span></span>
         </li>
       </ul>
 
@@ -43,17 +43,17 @@
         <span class="number bg-blue-600 flex-none">2</span><span>Your daily needs in 90 minutes, 3 times a week</span>
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
-        <li class="text-base md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F44D;&#x1F3FC;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Proven practices</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Breathwork, movement, meditation, connection</span></span>
+        <li class="text-base md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F44D;&#x1F3FC;</span><span class="ml-2"><strong class="inline-block md:w-40 mr-1 font-bold">Proven practices</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Breathwork, movement, meditation, connection</span></span>
         </li>
-        <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x270F;&#xFE0F;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Focused work</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Complete your most important tasks</span></span>
+        <li class="text-base mt-3 md:mt-0 md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x270F;&#xFE0F;</span><span class="ml-2"><strong class="inline-block md:w-40 mr-1 font-bold">Focused work</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Complete your most important tasks</span></span>
         </li>
-        <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x2615;&#xFE0F;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Coffee + shakes</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Extremely high-quality morning beverages made on-site</span></span>
+        <li class="text-base mt-3 md:mt-0 md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x2615;&#xFE0F;</span><span class="ml-2"><strong class="inline-block md:w-40 mr-1 font-bold">Coffee + shakes</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Extremely high-quality morning beverages made on-site</span></span>
         </li>
-        <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F3A8;</span><span class="ml-1"><strong class="inline-block md:w-40 mr-1 font-bold">Just for you</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-1">Personalized based on your team's unique intake</span></span>
+        <li class="text-base mt-3 md:mt-0 md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F3A8;</span><span class="ml-2"><strong class="inline-block md:w-40 mr-1 font-bold">Just for you</strong><span class="text-sm md:text-base block md:inline-block md:ml-1">Personalized based on your team's unique intake</span></span>
         </li>
       </ul>
 
@@ -61,30 +61,30 @@
         <span class="number bg-yellow-600 flex-none">3</span>A personalized, actionable assessment
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
-        <li class="text-base md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F4C8;</span><span class="ml-1"><strong class="inline-block md:w-40 font-bold">Unique feedback</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">Quantitative and qualitative insights from your team</span></span>
+        <li class="text-base md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4C8;</span><span class="ml-2"><strong class="inline-block md:w-40 font-bold">Unique feedback</strong><span class="text-sm md:text-base block md:inline-block md:ml-4">Quantitative and qualitative insights from your team</span></span>
         </li>
-        <li class="text-base mt-3 md:mt-0 md:text-lg">
-          <span class="inline-block w-6 mr-3">&#x1F4A1;</span><span class="ml-1"><strong class="inline-block md:w-40 font-bold">Recommendations</strong><span class="text-sm md:text-base block md:inline-block ml-10 md:ml-4">To improve engagement, wellbeing, and productivity</span></span>
+        <li class="text-base mt-3 md:mt-0 md:text-lg flex">
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4A1;</span><span class="ml-2"><strong class="inline-block md:w-40 font-bold">Recommendations</strong><span class="text-sm md:text-base block md:inline-block md:ml-4">To improve engagement, wellbeing, and productivity</span></span>
         </li>
       </ul>
     </div>
 
-    <div class="container px-10 py-12 md:py-20 max-w-4xl">
+    <div class="container px-10 py-12 md:px-16 md:py-20 md:py-20 max-w-4xl">
       <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">
         Frequently asked questions
       </h2>
       <ul class="mt-8 text-lg md:text-xl">
-        <li class="mb-6">
+        <li class="mb-8">
           <h3 class="font-semibold mb-3">What do we need to get started?</h3>
           <p class="mb-3 leading-relaxed">All we need is a space that can hold 8 to 10 people that we can reserve 3 times a week before work, typically Monday, Wednesday, Friday 7:30 am – 9:00 am.</p>
           <p class="leading-relaxed">We’ll provide the facilitation, coffee, shakes, and other materials necessary!</p>
         </li>
-        <li class="mb-6">
+        <li class="mb-8">
           <h3 class="font-semibold mb-3">What makes the Team Morning Upgrade unique?</h3>
           <p class="mb-3 leading-relaxed">In addition to our intakes, assessments, morning routines (including delicious coffee and shakes!), we offer complimentary accountability check-ins and offline coaching to your employees during the engagement.</p>
         </li>
-        <li>
+        <li class="mb-8">
           <h3 class="font-semibold mb-3">What are the benefits of a morning routine?</h3>
           <p class="mb-3 leading-relaxed">Morning routines are followed by the most accomplished athletes, entrepreneurs, and creatives, including Bill Gates, Benjamin Franklin, and Oprah and are a powerful way to fulfill your most important daily needs — hydration, movement, connection, focus, and creation.</p>
         </li>
@@ -95,7 +95,7 @@
       </ul>
     </div>
     <div style="background: #FAF2E0">
-      <div class="container px-10 py-12 md:py-20 max-w-4xl">
+      <div class="container px-10 py-12 md:px-16 md:py-20 md:py-20 max-w-4xl">
         <h2 class="mb-8 text-2xl md:text-3xl font-extrabold leading-tight">
           Learn more
         </h2>
