fix footer spacing

--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,7 @@
       </div>
     </div>
     <div class="bg-black">
-      <div class="container px-16 py-16 md:py-20 max-w-4xl">
+      <div class="container px-10 py-12 md:px-16 md:py-20 max-w-4xl">
         <p><img src="/images/practice-white.svg" width="76" class="inline-block"><span style="padding: 0 7px; font-size: 13px">&#x2764;&#xFE0F;</span><img src="/images/pillpack-white.svg" width="80" class="inline-block"></p>
       </div>
     </div>
