center footer; simplify sign up section

--- a/public/index.html
+++ b/public/index.html
@@ -95,21 +95,18 @@
       </ul>
     </div>
     <div style="background: #FAF2E0">
-      <div class="container px-10 py-12 md:px-16 md:py-20 md:py-20 max-w-4xl">
-        <h2 class="mb-8 text-2xl md:text-3xl font-extrabold leading-tight">
-          Learn more
-        </h2>
+      <div class="container px-10 py-12 md:px-16 md:py-20 md:py-20 max-w-4xl text-center">
         <form action="https://community.us19.list-manage.com/subscribe/post?u=5963ef15ff4e776e4bdc64cec&amp;id=c201bb3658" method="post" target="_blank" class="text-lg md:text-xl" novalidate>
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5963ef15ff4e776e4bdc64cec_c201bb3658" tabindex="-1" value=""></div>
-          <div class="flex flex-col md:flex-row">
-            <input class="md:mr-2 mb-3 md:mb-0 px-4 py-3 bg-transparent border border-black rounded" type="email" name="EMAIL" placeholder="Email"><input class="px-4 py-3 bg-black font-medium rounded cursor-pointer hover:opacity-75" style="color: #FAF2E0" type="submit" value="Sign up">
+          <div class="flex flex-col md:flex-row justify-center">
+            <input class="md:mr-2 mb-3 md:mb-0 px-4 py-3 bg-transparent border border-black rounded" type="email" name="EMAIL" placeholder="Your email address"><input class="px-4 py-3 bg-black font-medium rounded cursor-pointer hover:opacity-75" style="color: #FAF2E0" type="submit" value="Learn more">
           </div>
         </form>
       </div>
     </div>
     <div class="bg-black">
-      <div class="container px-10 py-12 md:px-16 md:py-20 max-w-4xl">
+      <div class="container px-10 py-12 md:px-16 md:py-20 max-w-4xl text-center">
         <p><img src="/images/practice-white.svg" width="76" class="inline-block"><span style="padding: 0 7px; font-size: 13px">&#x2764;&#xFE0F;</span><img src="/images/pillpack-white.svg" width="80" class="inline-block"></p>
       </div>
     </div>
