update copy / spacing

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div style="background: #FAF2E0">
-      <div class="container px-10 md:px-40 py-20 md:py-32 text-center">
+      <div class="container px-10 md:px-36 py-20 md:py-32 text-center">
         <h1 class="mb-3 text-2xl md:text-5xl font-extrabold leading-tight">
           Upgrade your mornings.<br>Upgrade your team.
         </h1>
@@ -21,13 +21,13 @@
     </div>
     <div>
       <div class="container px-10 py-12 md:py-20 text-center max-w-3xl">
-        <p class="md:text-xl"><strong>Practice</strong> is offering our 1-week Team Morning Upgrade product to make your team more <strong>engaged</strong>, <strong>connected</strong>, and <strong>productive</strong>.</p>
+        <p class="md:text-xl"><strong>Practice</strong> is offering PillPack our Team Morning Upgrade, a 1-week free trial of our service to increase team <strong>engagement</strong>, <strong>wellbeing</strong>, and <strong>productivity</strong>.</p>
       </div>
     </div>
 
     <div class="container px-10 py-12 md:px-16 md:py-20 bg-black text-white max-w-4xl text-lg md:text-xl">
       <h2 class="text-2xl md:text-3xl font-extrabold leading-tight">
-        What is the Team Morning Upgrade?
+        What's in the Team Morning Upgrade week?
       </h2>
 
       <h2 class="font-bold mt-10 md:mt-12 flex items-baseline">
@@ -40,7 +40,7 @@
       </ul>
 
       <h2 class="font-bold mt-8 md:mt-12 flex items-baseline">
-        <span class="number bg-blue-600 flex-none">2</span><span>Your daily needs in 90 minutes, 3 times a week</span>
+        <span class="number bg-blue-600 flex-none">2</span><span>Three days of our facilitated Morning Practice</span>
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg flex">
@@ -58,14 +58,14 @@
       </ul>
 
       <h2 class="font-bold mt-8 md:mt-12 flex items-baseline">
-        <span class="number bg-yellow-600 flex-none">3</span>A personalized, actionable assessment
+        <span class="number bg-yellow-600 flex-none">3</span>A week-end, actionable assessment
       </h2>
       <ul class="md:leading-loose mt-3 ml-1">
         <li class="text-base md:text-lg flex">
-          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4C8;</span><span class="ml-2"><strong class="inline-block md:w-40 font-bold">Unique feedback</strong><span class="text-sm md:text-base block md:inline-block md:ml-4">Quantitative and qualitative insights from your team</span></span>
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4C8;</span><span class="ml-2"><strong class="inline-block md:w-32 font-bold">Unique data</strong><span class="text-sm md:text-base block md:inline-block">Quantitative and qualitative insights from your team</span></span>
         </li>
         <li class="text-base mt-3 md:mt-0 md:text-lg flex">
-          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4A1;</span><span class="ml-2"><strong class="inline-block md:w-40 font-bold">Recommendations</strong><span class="text-sm md:text-base block md:inline-block md:ml-4">To improve engagement, wellbeing, and productivity</span></span>
+          <span class="inline-block w-6 mr-2 md:mr-3">&#x1F4A1;</span><span class="ml-2"><strong class="inline-block md:w-32 font-bold">Next steps</strong><span class="text-sm md:text-base block md:inline-block">To improve engagement, wellbeing, and productivity</span></span>
         </li>
       </ul>
     </div>
@@ -77,7 +77,7 @@
       <ul class="mt-8 text-lg md:text-xl">
         <li class="mb-8">
           <h3 class="font-semibold mb-3">What do we need to get started?</h3>
-          <p class="mb-3 leading-relaxed">All we need is a space that can hold 8 to 10 people that we can reserve 3 times a week before work, typically Monday, Wednesday, Friday 7:30 am – 9:00 am.</p>
+          <p class="mb-3 leading-relaxed">All you need is a space that can hold 8 to 10 people that we can reserve 3 times a week before work, typically Monday, Wednesday, Friday 7:30 am – 9:00 am.</p>
           <p class="leading-relaxed">We’ll provide the facilitation, coffee, shakes, and other materials necessary!</p>
         </li>
         <li class="mb-8">
