--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,13 @@
         opacity: 1; /* Firefox */
       }
     </style>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158206281-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-158206281-1');
+    </script>
   </head>
   <body>
     <div style="background: #FAF2E0">
